--- a/latex/references.bib
+++ b/latex/references.bib
@@ -94,6 +94,46 @@
   volume =	 {9},
   pages =	 {1871--1874}
 }
+@article{hsu2002comparison,
+  title={A comparison of methods for multiclass support vector machines},
+  author={Hsu, C.W. and Lin, C.J.},
+  journal={Neural Networks, IEEE Transactions on},
+  volume={13},
+  number={2},
+  pages={415--425},
+  year={2002},
+  publisher={IEEE}
+}
+@article{Rifkin:2004:DOC:1005332.1005336,
+ author = {Rifkin, Ryan and Klautau, Aldebaro},
+ title = {In Defense of One-Vs-All Classification},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {12/1/2004},
+ volume = {5},
+ month = dec,
+ year = {2004},
+ issn = {1532-4435},
+ pages = {101--141},
+ numpages = {41},
+ url = {http://dl.acm.org/citation.cfm?id=1005332.1005336},
+ acmid = {1005336},
+ publisher = {JMLR.org},
+} 
+@article{wan2005speaker,
+  title={Speaker verification using sequence discriminant support vector machines},
+  author={Wan, V. and Renals, S.},
+  journal={Speech and Audio Processing, IEEE Transactions on},
+  volume={13},
+  number={2},
+  pages={203--210},
+  year={2005},
+  publisher={IEEE}
+}
+
+
+
+
+
 
 
 
