--- a/latex/matter/ivector.tex
+++ b/latex/matter/ivector.tex
@@ -19,7 +19,7 @@ The low-dimensional vector $\mathbf{w}$, called iVector, would now be affected b
 \label{phieq}
 \phi_{nc}=\frac{\exp(m_c+\mathbf{t}_c \cdot \mathbf{w}_n)}{\sum_{i=1}^C \exp(m_i+\mathbf{t}_i \cdot \mathbf{w}_n)}
 \end{equaiton}
-where $C$ is the total number of discrete features, $\mathbf{t}_i$ is the $i$-th row of the total variability matrix $\mathbf{T}$, and $m_i$ the $i$-th element of the $\mathbf{m}$-vector. This model was then utilized for language recognition in \cite{lrivector}.
+where $C$ is the total number of discrete features, $\cdot$ denotes the inner product, $\mathbf{t}_i$ is the $i$-th row of the total variability matrix $\mathbf{T}$, and $m_i$ the $i$-th element of the $\mathbf{m}$-vector. This model was then utilized for language recognition in \cite{lrivector}.
 
 \section{Interpretation of iVector Model}
 
@@ -28,9 +28,7 @@ From equation \ref{phieq} we can see the iVector as a set of parameters that gov
 \label{utterancelike}
 \log(p(\gamma_n | \phi_n)) = \sum_{c=1}^C \gamma_{nc} \log(\phi_{nc})
 \end{equation}
-where $\gamma_{nc}$ is the number of times feature $c$ was observed in utterance $n$. If features are $n$-grams, then the likelihood given from this model will be quite similar to the model presented in section \ref{sect:baselinetheory} except that only one multinomial distrbution is used, not one per possible $n$-gram history. This is a slight inaccuracy in the model when using $n$-grams, since per defintion, only a fraction of the $n$-grams can follow the previous $n$-gram. But like JFA, the recognition decision will be based solely on the latent vector, or iVector in our case. We will perhaps model some redundant information since the model requires us to estimate probabilites for $n$-grams that cannot occur in the utterance. The iVector should make these probabilites low so that there is more probability mass for features that do occur, but even if the likelihood estimate we use is inaccurate, the iVectors should still in some way reflect the $n$-grams in an utterance so that languages can be separated.
-
-The log-likelihood for a set of utterances will simply be
+where $\gamma_{nc}$ is the number of times feature $c$ was observed in utterance $n$. If features are $n$-grams, then the likelihood given from this model will be quite similar to the model presented in section \ref{sect:baselinetheory} except that only one multinomial distrbution is used, not one per possible $n$-gram history. This is a slight inaccuracy in the model when using $n$-grams, since per defintion, only a fraction of the $n$-grams can follow the previous $n$-gram. But like JFA, the recognition decision will be based solely on the latent vector, or iVector in our case. We will perhaps model some redundant information since the model requires us to estimate probabilites for $n$-grams that cannot occur in the utterance. The iVector should make these probabilites low so that there is more probability mass for features that do occur, but even if the likelihood estimate we use is inaccurate, the iVectors should still in some way reflect the $n$-grams in an utterance so that languages can be separated. The log-likelihood for a set of utterances will simply be
 \begin{equation}
 \label{iloglike}
 \log(p(\gamma | \phi)) = \sum_{n=1}^N \log(p(\gamma_n | \phi_n)).
@@ -38,6 +36,8 @@ The log-likelihood for a set of utterances will simply be
 
 
 \section{Model Training}
+
+
 
 \section{Model Recognition}
 
